# beaglebone-servo

./: CMakeLists.txt  Makefile  README.md  servo.cpp  servo.h  test1.cpp  testRequest.py
include/: gpio.hpp  motordriver.h  motorpwm.h  pinmux.hpp
scripts/: example9.py
src/: gpio.cpp  motordriver.cpp  motorpwm.cpp  pinmux.cpp  pwm.py  servo.cpp  servo2.cpp  test1.cpp  test2.cpp  test3.cpp
